syntax = "proto3";

package growing.graphql.example;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_package = "io.growing.gateway.example";
option java_multiple_files = true;
option java_outer_classname = "JobProto";

message JobDto {
  string name = 1;
  google.protobuf.StringValue description = 2;
  repeated string tags = 3;
}

service JobService {

  rpc Get(GetJobRequest) returns(JobDto){}

  rpc List(ListJobRequest) returns(stream JobDto){}

  rpc Delete(DeleteJobRequest) returns(google.protobuf.Empty){}

}

message ListJobRequest {

}

message GetJobRequest {
  int64 id = 1;
}

message DeleteJobRequest {
  int64  id = 1;
}
